--- a/app/views/home/_story.html.erb
+++ b/app/views/home/_story.html.erb
@@ -89,13 +89,13 @@
       </div>
       
       <h2>
-        Mine is a directory <br class="rwd-show">of people and their purchases.
+        Mine is a directory <br class="rwd-show">of people and purchases.
       </h2>
       
       <div style="text-align: center;">
       
         <a class="btn btn-large btn-join rounded-3 shaded-strong relative"
-        	style="background-color: #FF6600;" href="#join" role="button" data-toggle="modal">
+        	style="background-color: #5da255;" href="#join" role="button" data-toggle="modal">
           <span class='hide-when-loading'>
             Join Now for Free
           </span>
