--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -24,7 +24,7 @@ a:hover { text-decoration: none; }
 	top: 0;
 	width: 100%;
 	height: 450px;
-	background: url('/images/backgrounds/bg-strip.png') repeat-x top left; }
+	background: #2D3538 /* url('/images/backgrounds/bg-strip.png') repeat-x top left */; }
 
 .header-home { text-align: center; width: 904px; margin: 0 auto; }
 .header-home .logo-home { padding: 18px 0 12px; height: 68px; }
