important home page color change

--- a/app/views/user_mailer/run_importer.text.html.erb
+++ b/app/views/user_mailer/run_importer.text.html.erb
@@ -21,7 +21,7 @@
     <%=render :partial => "action_button",
         :locals => {
         :url => root_url(:src => @source),
-        :text => "Show me my purchases"}%>	
+        :text => "OK, show me the magic"}%>	
     
     <p style="color: #888; max-width: 300px; margin-left: auto; padding: 16px 0 8px; margin-right: auto; font-size:14px; line-height: 140%; 
     	font-family: 'Helvetica Neue', 'Helvetica'; -webkit-font-smoothing: antialiased;">
