--- a/app/views/home/_story.html.erb
+++ b/app/views/home/_story.html.erb
@@ -95,7 +95,7 @@
       <div style="text-align: center;">
       
         <a class="btn btn-large btn-join rounded-3 shaded-strong relative"
-        	style="background-color: #5da255;" href="#join" role="button" data-toggle="modal">
+        	style="background-color: #ff6600;" href="#join" role="button" data-toggle="modal">
           <span class='hide-when-loading'>
             Join Now for Free
           </span>
