new messaging for the web

--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -1,8 +1,8 @@
 <%content_for :head do%>
   <%=render :partial => 'misc/meta',
       :locals => {
-        :title => "#{CONFIG[:name]} - Tell the world when you buy something great.",
-        :description => "Post purchases, perfectly. Share the best stuff in your life. Learn from friends and followers."}%>
+        :title => "#{CONFIG[:name]} - A directory of people and purchases.", 
+        :description => "Discover new products through people you know who've bought them."}%>
 <%end%>
 
 <%content_for :top do%>
