--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
             :locals   => {
               :title        => "#{@user.full_name}'s Mine",
               :type         => "link",
-              :description  => "Tell the world when you buy something great. Post purchases, perfectly.",
+              :description  => "Mine is a directory of people and purchases.",
               :url          => user_url(@user.handle,:src => 'fb'),
               :image        => image_path('og/mine-white-200.png')}%>
 <%end%>
