parseable stores admin ui.

--- a/app/views/admin/help/show.html.erb
+++ b/app/views/admin/help/show.html.erb
@@ -51,6 +51,9 @@
   <%=link_to 'Crawlable',
               admin_stores_path(:filter => 'crawlable')%> <br>
 
+  <%=link_to 'Parseable',
+              admin_stores_path(:filter => 'parseable')%> <br>
+
   Edit View of Store. /admin/stores/{handle}/edit
   Example - <%=link_to 'Target',edit_admin_store_path('target')%>
   <br>
