--- a/app/views/user_mailer/download_app.text.html.erb
+++ b/app/views/user_mailer/download_app.text.html.erb
@@ -9,21 +9,23 @@
   	<p style="font-size:18px; color: #555; line-height: 140%; 
     	font-family: 'Helvetica Neue', 'Helvetica'; -webkit-font-smoothing: antialiased;">  
 
-			Download the Mine app please do <%=CONFIG[:ios_app_link]%>
+			It's time to go mobile.<br>
+			Get the 5-star Mine for iPhone:
 			
 		</p>
 		
-		<a href="<%=root_url(:src => @source)%>">
-			<%=image_tag "email/import-bw.png",
-							:style => "width: 160px; padding-bottom: 20px;"%>
+		<a href="<%=CONFIG[:ios_app_link]%>">
+			<%=image_tag "email/mine-app-icon-128.png",
+						:style => "width: 64px; padding-bottom: 20px;"%>
 		</a>
 
     <%=render :partial => "action_button",
         :locals => {
-        :url => root_url(:src => @source),
-        :text => "OK, show me the magic"}%>	
+        :url => CONFIG[:ios_app_link],
+        :text => "Download Mine for iPhone"}%>	
     
     <p style="color: #888; max-width: 300px; margin-left: auto; padding: 16px 0 8px; margin-right: auto; font-size:14px; line-height: 140%; 
     	font-family: 'Helvetica Neue', 'Helvetica'; -webkit-font-smoothing: antialiased;">
-    	Questions? Comments?<br>Email us at <a href="mailto:contact@getmine.com">contact@getmine.com</a>
+    	Have an Android or other smartphone?<br>
+    	Go mobile at <a href="http://getmine.com">getmine.com</a> on your device.
     </p> 
