--- a/app/views/user_mailer/friend_imported.text.html.erb
+++ b/app/views/user_mailer/friend_imported.text.html.erb
@@ -1,15 +1,18 @@
 <td align="center" style="font-size: 0; padding: 24px 12px;">
   <font face="Arial" color="#333"> 
   
-  	<p style="font-size:24px; color: #333; 
-    	font-family: 'Helvetica Neue', 'Helvetica'; -webkit-font-smoothing: antialiased; margin-bottom: -6px;">
-    	Hi <%=@user.first_name%>,
-    </p>
+		<a href="">
+	    <%=image_tag "http://graph.facebook.com/502835064/picture?type=square", 
+	    :alt => "", :style => "width: 48px; height: 48px; max-width: 48px; max-height: 48px; 
+	    -webkit-border-radius:3px; -moz-border-radius:3px; border-radius:3px;"%></a>
+	    
+	  <br>
+
   		
   	<p style="font-size:18px; color: #555; line-height: 140%; 
     	font-family: 'Helvetica Neue', 'Helvetica'; -webkit-font-smoothing: antialiased;">  
 
-			Your friend <%=@friend.first_name%> imported their purchases.
+			<%=@friend.first_name%> just updated his Mine using the e-receipt importer.
 			
 		</p>
 		
@@ -21,9 +24,9 @@
     <%=render :partial => "action_button",
         :locals => {
         :url => user_url(@friend.handle,:src => @source),
-        :text => "See their profile"}%>	
+        :text => "View his latest purchases"}%>	
     
     <p style="color: #888; max-width: 300px; margin-left: auto; padding: 16px 0 8px; margin-right: auto; font-size:14px; line-height: 140%; 
     	font-family: 'Helvetica Neue', 'Helvetica'; -webkit-font-smoothing: antialiased;">
-    	Questions? Comments?<br>Email us at <a href="mailto:contact@getmine.com">contact@getmine.com</a>
+    	Mine's email importer works with Gmail or Yahoo! accounts. Mine doesn't store any emails, e-receipts or passwords.
     </p> 
