hookup links in new emails.

--- a/app/views/user_mailer/download_app.text.html.erb
+++ b/app/views/user_mailer/download_app.text.html.erb
@@ -27,5 +27,5 @@
     <p style="color: #888; max-width: 300px; margin-left: auto; padding: 16px 0 8px; margin-right: auto; font-size:14px; line-height: 140%; 
     	font-family: 'Helvetica Neue', 'Helvetica'; -webkit-font-smoothing: antialiased;">
     	Have an Android or other smartphone?<br>
-    	Go mobile at <a href="http://getmine.com">getmine.com</a> on your device.
+    	Go mobile at <a href="<%=root_url(:src => @source)%>">getmine.com</a> on your device.
     </p> 
