--- a/app/views/user_mailer/friend_imported.text.html.erb
+++ b/app/views/user_mailer/friend_imported.text.html.erb
@@ -1,7 +1,7 @@
 <td align="center" style="font-size: 0; padding: 24px 12px;">
   <font face="Arial" color="#333"> 
   
-		<a href="">
+		<a href="<%=user_url(@friend.handle,:src => @source)%>">
 	    <%=image_tag "http://graph.facebook.com/502835064/picture?type=square", 
 	    :alt => "", :style => "width: 48px; height: 48px; max-width: 48px; max-height: 48px; 
 	    -webkit-border-radius:3px; -moz-border-radius:3px; border-radius:3px;"%></a>
