--- a/app/views/welcome/connect.html.erb
+++ b/app/views/welcome/connect.html.erb
@@ -1,9 +1,9 @@
 <div class="well-box padded border-box rounded-8 relative">
 
-	<h2>Import your recent purchases, automagically</h2>
+	<h2>View your recent purchases, automagically</h2>
 	
 	<p class="txt m border-box">
-		Connect your email, sit back and preview your revived e-receipts.
+		Pick the email you use for Amazon, iTunes, etc…
 	</p>
 	
 	<div style="padding: 12px 0 22px;">
@@ -29,7 +29,7 @@
 
 
 	<div class="txt s">
-		Pick the email you use for Amazon, iTunes, etc...
+		Mine does not store your password, receipts or emails.
 		<a style="float: right;" class="opacity-80-100 transition-opacity" 
         href="<%=root_path(:src => 'skip')%>">
 			Skip
