--- a/app/views/user_mailer/friend_imported.text.html.erb
+++ b/app/views/user_mailer/friend_imported.text.html.erb
@@ -2,7 +2,7 @@
   <font face="Arial" color="#333"> 
   
 		<a href="<%=user_url(@friend.handle,:src => @source)%>">
-	    <%=image_tag "http://graph.facebook.com/502835064/picture?type=square", 
+	    <%=image_tag @friend.square_image_url,
 	    :alt => "", :style => "width: 48px; height: 48px; max-width: 48px; max-height: 48px; 
 	    -webkit-border-radius:3px; -moz-border-radius:3px; border-radius:3px;"%></a>
 	    
