add new setting for email_importer.

--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -72,6 +72,17 @@
 		            :class => "checkbox txt m pointer unselectable"%>
 			    </div>              
 		    </div>
+				
+				<div class="control-group" style="margin-bottom: 0;">
+					<label class="control-label txt m" style="width: 80px;">
+		        E-receipt Importer
+		      </label>
+					<div class="controls" style="margin-left: 100px;">
+				    <%=f.label :email_importer,
+		            "#{f.check_box :email_importer} Email me about new e-receipts in my email",
+		            :class => "checkbox txt m pointer unselectable"%>
+			    </div>              
+		    </div>
 				<!-- /Notifications -->
 		  
 		  </fieldset>
