new about description at the top

--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -4,8 +4,8 @@
 
 <div class="info-box well-box border-box rounded-5 alias-smooth relative">
 	<p class="txt m border-box" style="margin-bottom: 0;">
-		Mine is a quick and easy service for telling people when you buy something. 
-		Post your item's official picture, store and link; control who you share with; and build your online catalog of purchases.
+		Mine is a directory of people and the interesting things they've bought. People use Mine to import their purchase history, 
+		look up, browse and follow other people, discover new items through them, and shop.
 	</p>
 </div>
 
