faq updated for new directory angle

--- a/app/views/static/faq.html.erb
+++ b/app/views/static/faq.html.erb
@@ -5,10 +5,10 @@
 <div class="info-box well-box border-box rounded-5 alias-smooth relative">
 
 	<div class="unit">
-		<h4>What is mine?</h4>
+		<h4>What is Mine?</h4>
 		<p class="txt m border-box" style="margin-bottom: 0;">
-			Mine is a quick and easy service for telling people when you buy something. 
-			Post your item's official picture, store and link; control who you share with; and build your online catalog of purchases.
+			Mine is a directory of people and the interesting things they've bought. People use Mine to import their purchase history, 
+		look up, browse and follow other people, discover new items through them, and shop.
 		</p>
 	</div>
 	
@@ -28,13 +28,12 @@
 	<div class="unit">
 		<h4>Who sees the purchases I share?</h4>
 		<p class="txt m border-box" style="margin-bottom: 0;">
-			Your followers on mine (you'll build these up over time), and, if you connect your accounts, your connections on Facebook, Twitter and Tumblr, too.
-			You control who sees what every time you post.
+			Your followers on Mine (you'll build these up over time), people who look you up by name, and, if you connect your accounts and choose to share out, your connections on Facebook, Twitter and Tumblr, too.
 		</p>
 	</div>
 	
 	<div class="unit">
-		<h4>What does following someone on mine do?</h4>
+		<h4>What does following someone on Mine do?</h4>
 		<p class="txt m border-box" style="margin-bottom: 0;">
 			When you click the 'Follow' button next to a user's name, you'll start seeing purchased items they've shared in your feed when you log in.
 			You can follow and unfollow anyone you like, at any time.
@@ -58,7 +57,7 @@
 	</div>
 	
 	<div class="unit">
-		<h4>Who makes mine?</h4>
+		<h4>Who makes Mine?</h4>
 		<p class="txt m border-box" style="margin-bottom: 0;">
 			We're a small team based in Palo Alto, California. Find out more about us 
       <%=link_to "here",
@@ -70,7 +69,7 @@
 	<div class="unit">
 		<h4>I have a problem. Whom should I contact?</h4>
 		<p class="txt m border-box" style="margin-bottom: 0;">
-			Email us any time at <a class="dark underlined" href="mailto:contact@getmine.com">contact@getmine.com</a> and we'll get back to you as soon as we can.
+			Email us any time at <a class="dark underlined" href="mailto:contact@getMine.com">contact@getMine.com</a> and we'll get back to you as soon as we can.
 		</p>
 	</div>
 	
