home sample 2 updated

--- a/app/views/home/_story.html.erb
+++ b/app/views/home/_story.html.erb
@@ -235,7 +235,7 @@
 						<%end%> 
 	            class="cell rounded-8 border-box transition-bg 
 	                    transition-color transition-border-color relative">
-						<%=image_tag "home/richard.jpg",
+						<%=image_tag "home/Richard2.gif",
 							:class => "user-photo absolute rounded-3"%>
 						Richard is the designer behind the Mine logo. Here's his setup.
 						<i class="icon-chevron-right absolute transition-opacity"></i>
