--- a/app/views/home/samples/profile2.html.erb
+++ b/app/views/home/samples/profile2.html.erb
@@ -13,14 +13,14 @@
 
   	<div id="user_box" class="user-box">
   
-			<%=image_tag "home/richard.jpg",
+			<%=image_tag "home/Richard2.gif",
 					:class => "user-photo xxl rounded-3 absolute"%>		
 					        
     <div class="basics border-box">
     	<span class="rwd-hide"></span>Richard Perez 
     	<br>
     	<span class="item-count">
-        <b>21</b> 
+        <b>23</b> 
         items
       </span>
      	<img alt="T-box" class="t-box opacity-80-100" src="http://d3sqjd4akk98do.cloudfront.net/4083694da87bcc220eeabb270012c24ec40b2864/images/social/t-box.png?1349836608">
@@ -183,6 +183,54 @@
 
 
 <div class="profile-feed rounded-8 relative">
+
+
+	<div class="card relative rounded-3 border-box">
+	
+    <div class="photo-box rounded-3">
+    	 
+      	<img alt="" class="item-photo" src="http://d2lxhjuhtvdpxn.cloudfront.net/s_MTk5OGZmNWI0NjNmOTAyYThlZGQxMzU0NDY1OTAx.jpg">
+    	
+    </div>
+    
+    <div class="panel">
+    	<div class="panel-contents rounded-3 relative">
+    	
+    		<b class="caret absolute opaque"></b>
+    
+		    <div class="title-box txt s relative rounded-3">
+       		Charley Harper Animal Kingdom from Ammo 
+		    </div> <!--/title-box -->
+    
+    	</div> <!--/panel-contents -->
+    </div> <!--/panel -->
+    
+  </div> <!-- /card -->
+
+
+	<div class="card relative rounded-3 border-box">
+	
+    <div class="photo-box rounded-3">
+    	 
+      	<img alt="" class="item-photo" src="http://d2lxhjuhtvdpxn.cloudfront.net/s_NjQ3Nzg1YTI4OTllMDU1OTMwY2QxMzUxODYzNjE4.jpg">
+    	
+    </div>
+    
+    <div class="panel">
+    	<div class="panel-contents rounded-3 relative">
+    	
+    		<b class="caret absolute opaque"></b>
+    
+		    <div class="title-box txt s relative rounded-3">
+       		Orc Stain from Amazon 
+		    </div> <!--/title-box -->
+    
+    	</div> <!--/panel-contents -->
+    </div> <!--/panel -->
+    
+  </div> <!-- /card -->
+     
+     
   
     <div class="card relative rounded-3 border-box">
 	
