--- a/app/views/user_mailer/purchases_imported.text.html.erb
+++ b/app/views/user_mailer/purchases_imported.text.html.erb
@@ -9,14 +9,19 @@
   	<p style="font-size:18px; color: #555; line-height: 140%; 
     	font-family: 'Helvetica Neue', 'Helvetica'; -webkit-font-smoothing: antialiased;">  
 
-			We found <%=@count%> new purchases in your email
+			You have <%=@count%> recent purchases<br>to review on Mine.
 			
 		</p>
 		
-		<a href="<%=root_url(:src => @source)%>">
-			<%=image_tag "email/import-bw.png",
-							:style => "width: 160px; padding-bottom: 20px;"%>
-		</a>
+		<table border="0" width="100%" cellspacing="0" cellpadding="0" style="padding-bottom: 20px; height: 191px;">
+			<tr>
+				<td align="center" valign="center"
+				  style="font-family: 'Helvetica Neue', 'Helvetica'; color: #555; font-weight: bold; font-size: 48px;
+				  background-image: url('/images/email/import-empty-bw.png'); background-repeat: no-repeat; background-position: center;">
+					99
+				</td>
+			</tr>
+		</table>
 
     <%=render :partial => "action_button",
         :locals => {
