--- a/app/views/user_mailer/purchases_imported.text.html.erb
+++ b/app/views/user_mailer/purchases_imported.text.html.erb
@@ -18,7 +18,7 @@
 				<td align="center" valign="center"
 				  style="font-family: 'Helvetica Neue', 'Helvetica'; color: #555; font-weight: bold; font-size: 48px;
 				  background-image: url('/images/email/import-empty-bw.png'); background-repeat: no-repeat; background-position: center;">
-					99
+					<%=@count%>
 				</td>
 			</tr>
 		</table>
