logic for purchases imported email.

--- a/app/views/user_mailer/purchases_imported.text.html.erb
+++ b/app/views/user_mailer/purchases_imported.text.html.erb
@@ -9,7 +9,7 @@
   	<p style="font-size:18px; color: #555; line-height: 140%; 
     	font-family: 'Helvetica Neue', 'Helvetica'; -webkit-font-smoothing: antialiased;">  
 
-			You have <%=@count%> recent purchases<br>to review on Mine.
+			You have <%=@count%> recent <%=@noun%><br>to review on Mine.
 			
 		</p>
 		
@@ -26,7 +26,7 @@
     <%=render :partial => "action_button",
         :locals => {
         :url => unapproved_purchases_url(:src => @source),
-        :text => "Review your purchases"}%>	
+        :text => "Review your #{@noun}"}%>	
     
     <p style="color: #888; max-width: 300px; margin-left: auto; padding: 16px 0 8px; margin-right: auto; font-size:14px; line-height: 140%; 
     	font-family: 'Helvetica Neue', 'Helvetica'; -webkit-font-smoothing: antialiased;">
