--- a/app/views/user_mailer/purchases_imported.text.html.erb
+++ b/app/views/user_mailer/purchases_imported.text.html.erb
@@ -17,7 +17,7 @@
 			<tr>
 				<td align="center" valign="center"
 				  style="font-family: 'Helvetica Neue', 'Helvetica'; color: #555; font-weight: bold; font-size: 48px;
-				  background-image: url('<%=image_path "email/import-empty-bw.png"%>'); background-repeat: no-repeat; background-position: center;">
+				  background-image: url('<%=image_url "email/import-empty-bw.png"%>'); background-repeat: no-repeat; background-position: center;">
 					<%=@count%>
 				</td>
 			</tr>
