--- a/app/views/user_mailer/purchases_imported.text.html.erb
+++ b/app/views/user_mailer/purchases_imported.text.html.erb
@@ -31,7 +31,7 @@
 				
 		<br>
 		
-		<%=image_tag "/email/import-4.png",
+		<%=image_tag "email/import-4.png",
 				:style => "width: 160px; height: 60px; vertical-align: top; padding-bottom: 20px; line-height: 1;"%> 
 		
     <%=render :partial => "action_button",
