front end setup for hotmail connect.

--- a/app/views/welcome/connect.html.erb
+++ b/app/views/welcome/connect.html.erb
@@ -24,6 +24,16 @@
 		      :class => "hide-when-loading"%>
 		  <i class="icon-loading icon-white"></i>
 		</a>
+		<a id="hotmail_connect_button"
+		    class="btn btn-large btn-silver shaded rounded-3" 
+		    href="#hotmail_connect"
+        role="button"
+        data-toggle="modal"
+		    style="margin-left: 1.61%; width: 48%;">
+		  <%=image_tag "logos/email-yahoomail-logo-30.png",
+		      :class => "hide-when-loading"%>
+		  <i class="icon-loading icon-white"></i>
+		</a>
 		
 	</div>
 
@@ -35,6 +45,51 @@
 			Skip
 		</a>
 	</div>
+      
+  <! -- modal log in -->
+  <div class="modal eyeglass hide rounded-5" 
+    id="hotmail_connect" 
+    style="height: 368px; top: 50%; margin-top:-12px;">
+
+    <div class="modal-body rounded-3 relative" 
+      style="text-align: center; background: #444; height: 368px;">
+      
+      <h2 style="padding-bottom: 14px;">Hotmail Connect</h2>
+
+      <div class="box-title" style="padding-top: 4px;">
+        Email - (Hotmail, MSN, Live or Outlook)
+      </div>
+
+      <%=text_field_tag :hotmail_email,"",
+            :class => "enter txt l rounded-3 border-box",
+            :style => "width: 75%"%>
+
+      <div class="box-title" style="padding-top: 4px;">
+        Password 
+      </div>
+
+      <%=password_field_tag :hotmail_password,"",
+            :class => "enter txt l rounded-3 border-box",
+            :style => "width: 75%"%>
+
+      <br>
+
+      <button id="hotmail_submit_button" 
+          type="submit" 
+          class="btn btn-large border-box shaded rounded-5"
+          style="width: 100px; margin-top: 24px;">
+          <span class="hide-when-loading">
+            Connect
+            <%=image_tag "icons/PNG-Arrows/32px-white/rounded-big-2-01-white.png", 
+                  :style => "height: 14px; margin: 13px 0 0 4px; vertical-align: top;"%>
+          </span>
+          <i class="icon-loading icon-white"></i>
+      </button> <!-- submit -->
+
+      <p style="padding-top: 16px;">100% secure</p>
+      
+    </div> <!-- /modal-body -->
+  </div> <!-- /modal log in -->
 
 </div> <!-- /well-box -->
 
