--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
                                                 :first_name,:last_name,:handle,
                                                 :created_at],
                                    :methods => [:square_image_url,:full_name,
-                                                  :age],
+                                                  :age,:obfuscated_id],
                                    :include => {
                                     :setting => {
                                      :only    => [],
