--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -10,6 +10,61 @@
 <%end%> 
 
 
+<%unless self.current_user.email_authorized?%>
+  <!-- email importer box -->
+  <div class="well-box border-box rounded-8 rwd-hide" 
+    style="margin: 2px 0 18px;">
+    <div class="user-action-box relative">
+    	<%=image_tag "import-star-ccc-32-2x.png",
+        		:style => "width: 32px; top: 0; left: 0;",
+            :class => "absolute opacity-80"%>		
+      <div class="txt m top-line opacity-80">
+        Start your Mine
+      </div>
+      <span class="txt s bottom-line opacity-80" href="javascript:void(0)">
+        Connect an email, review your purchases.
+      </span>
+      <a id="google_connect_button"
+          class="btn btn-small btn-silver shaded rounded-3-left absolute" 
+          href="javascript:void(0)" 
+          style="top: 2px; right: 0; margin-right: 148px;
+          width: 74px;">
+        <%=image_tag "logos/email-btn-gmail-2x.png",
+        		:style => "width: 40px; padding-bottom: 1px;",
+            :class => "hide-when-loading"%>
+        <i class="icon-loading icon-white"></i>
+      </a>
+      <a id="hotmail_connect_button"
+          class="btn btn-small btn-silver shaded square absolute" 
+          href="#hotmail_connect"
+          role="button"
+          data-toggle="modal"
+          style="top: 2px; right: 0; margin-right: 74px;
+          width: 74px;
+          border-left: 1px solid #ababab; 
+          border-left: 1px solid rgba(0,0,0,0.16);">
+        <%=image_tag "logos/email-btn-hotmail-2x.png",
+        		:style => "width: 62px; padding-bottom: 1px;",
+            :class => "hide-when-loading"%>
+        <i class="icon-loading icon-white"></i>
+      </a>
+      <a id="yahoo_connect_button"
+          class="btn btn-small btn-silver shaded rounded-3-right absolute" 
+          href="javascript:void(0)" 
+          style="top: 2px; right: 0; width: 74px;
+          border-left: 1px solid #ababab; 
+          border-left: 1px solid rgba(0,0,0,0.16);">
+        <%=image_tag "logos/email-btn-yahoo-2x.png",
+        		:style => "width: 53px;",
+            :class => "hide-when-loading"%>
+        <i class="icon-loading icon-white"></i>
+      </a>
+    </div>
+  </div>
+  <!-- /email importer box -->
+<%end%>
+
+
 <%if is_phone_device?%>
 	<div id="notifications_box" style="display:none">
 	  <div class="box-title" style="margin-top: -6px;">
@@ -29,14 +84,14 @@
     Who to follow
   </div>
 
-  <div class="well-box border-box rounded-8" style="margin: 2px 0 18px;">
+  <div class="well-box border-box rounded-8" style="margin: 2px 0 12px;">
     <ul id="user_suggestions">
     </ul>
   </div> 
 </div> <!-- user suggestions box-->
 
 
-
+<!-- creation 
 <div id="creation" 
   style="margin-top: -6px;" 
   class="create-box unit-box border-box">
@@ -46,13 +101,13 @@
 	</div>
 
 	<div class="well-box border-box rounded-8">
-	  <%form_for Purchase.new,
+	  <#form_for Purchase.new,
 	      :html => {
 	        :class => "form-horizontal",
 	        :style => "margin-bottom: 0;"} do |f|%>   
 	    
 		  
-      <%=render :partial => 'purchases/input', 
+      <#=render :partial => 'purchases/input', 
           :locals => {
             :f => f,
             :suggestion => nil,
@@ -66,61 +121,15 @@
             :fb_share_on => self.current_user.setting.post_to_facebook?,
             :tw_share_on => self.current_user.setting.post_to_twitter?,
             :tumblr_share_on => self.current_user.setting.post_to_tumblr?}%>
-	  <%end%> <!-- /form --> 
+	  <#end%> <!-- /form 
   </div>
 
 </div> <!-- /create-box -->
 
 
-<%unless self.current_user.email_authorized?%>
-  <!-- email importer box -->
-  <div class="well-box border-box rounded-8-bottom rwd-hide" 
-    style="padding-top: 2px; margin: -17px 0 12px; box-shadow: none;">
-    <div class="email-action-box relative">		
-      <div class="txt m top-line opacity-80">
-        Import purchases automagically via your inbox
-      </div>
-      <span class="txt s bottom-line opacity-80" href="javascript:void(0)">
-        Connect to preview your items.
-      </span>
-      <a id="google_connect_button"
-          class="btn btn-small btn-silver shaded rounded-3-left absolute" 
-          href="javascript:void(0)" 
-          style="width: 16.61%; top: 12px; right: 16.61%;">
-        <%=image_tag "logos/email-gmail-logo-18.png",
-            :class => "hide-when-loading"%>
-        <i class="icon-loading icon-white"></i>
-      </a>
-      <a id="yahoo_connect_button"
-          class="btn btn-small btn-silver shaded rounded-3-right absolute" 
-          href="javascript:void(0)" 
-          style="width: 16.61%; top: 12px; right: 0;
-          border-left: 1px solid #ababab; 
-          border-left: 1px solid rgba(0,0,0,0.16);">
-        <%=image_tag "logos/email-yahoo-logo-18.png",
-            :class => "hide-when-loading"%>
-        <i class="icon-loading icon-white"></i>
-      </a>
-      <a id="hotmail_connect_button"
-          class="btn btn-small btn-silver shaded rounded-3-right absolute" 
-          href="#hotmail_connect"
-          role="button"
-          data-toggle="modal"
-          style="width: 16.61%; top: 12px; right: -10px;
-          border-left: 1px solid #ababab; 
-          border-left: 1px solid rgba(0,0,0,0.16);">
-        <%=image_tag "logos/email-yahoo-logo-18.png",
-            :class => "hide-when-loading"%>
-        <i class="icon-loading icon-white"></i>
-      </a>
-    </div>
-  </div>
-  <!-- /email importer box -->
-<%end%>
-
-
 <div class="box-title feed-title relative">
 	Your feed
+	<a class="dark" style="float: right;" href="/">+ Add a purchase</a>
 </div>
 
 <%if self.current_user.inverse_followings_count.zero?%>
@@ -131,11 +140,11 @@
 </a>
 <%end%>
 
-<div class="feed-container rounded-8" style="background: #f5f5f5">
-	<div id="feed" class="feed rounded-8 relative">
+<div class="feed-container" style="background: #444;">
+	<div id="feed" class="feed relative">
 	</div> 
 	
-	<div id="feed-spinner" class="feed-loading whitesmoke">
+	<div id="feed-spinner" class="feed-loading dark">
 	</div> 
 </div> <!-- feed container -->
 
