view more added to wtf

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -73,7 +73,7 @@ li { line-height: 1; }
 	height: auto !important;
 	height: 100%;
 	margin: 0 auto -32px;
-	background: url('/images/backgrounds/grain-576-shaded.png') fixed top center repeat-y; }
+/* 	background: url('/images/backgrounds/grain-576-shaded.png') fixed top center repeat-y;  */}
 	
 .dimmer {
 	position: fixed;
