--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -82,6 +82,9 @@
 <div id="user_suggestions_box" style="display:none">
   <div class="box-title" style="margin-top: -6px;">
     Who to follow
+    <a class="dark" style="float: right;" href="/">
+    	View More
+    </a>
   </div>
 
   <div class="well-box border-box rounded-8" style="margin: 2px 0 12px;">
@@ -129,7 +132,9 @@
 
 <div class="box-title feed-title relative">
 	Your feed
-	<a class="dark" style="float: right;" href="/">+ Add a purchase</a>
+	<a class="dark" style="float: right;" href="/">
+		+ Add new purchase
+	</a>
 </div>
 
 <%if self.current_user.inverse_followings_count.zero?%>
