--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -82,7 +82,9 @@
 <div id="user_suggestions_box" style="display:none">
   <div class="box-title" style="margin-top: -6px;">
     Who to follow
-    <a class="dark" style="float: right;" href="/">
+    <a class="dark" 
+      style="float: right;" 
+      href="<%=user_suggestions_path(:src => 'feed')%>">
     	View More
     </a>
   </div>
