--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -96,9 +96,8 @@
 </div> <!-- user suggestions box-->
 
 
-<!-- creation 
 <div id="creation" 
-  style="margin-top: -6px;" 
+  style="margin-top: -6px;display:none" 
   class="create-box unit-box border-box">
 
 	<div class="box-title">
@@ -106,13 +105,13 @@
 	</div>
 
 	<div class="well-box border-box rounded-8">
-	  <#form_for Purchase.new,
+	  <%form_for Purchase.new,
 	      :html => {
 	        :class => "form-horizontal",
 	        :style => "margin-bottom: 0;"} do |f|%>   
 	    
 		  
-      <#=render :partial => 'purchases/input', 
+      <%=render :partial => 'purchases/input', 
           :locals => {
             :f => f,
             :suggestion => nil,
@@ -126,7 +125,7 @@
             :fb_share_on => self.current_user.setting.post_to_facebook?,
             :tw_share_on => self.current_user.setting.post_to_twitter?,
             :tumblr_share_on => self.current_user.setting.post_to_tumblr?}%>
-	  <#end%> <!-- /form 
+	  <%end%> <!-- /form -->
   </div>
 
 </div> <!-- /create-box -->
@@ -134,7 +133,11 @@
 
 <div class="box-title feed-title relative">
 	Your feed
-	<a class="dark" style="float: right;" href="/">
+	<a id="add_new_purchase"
+    class="dark" 
+    style="float: right;" 
+    href="javascript:void(0)"
+    onclick="$('#creation').show();$('#purchase_query').focus();$('#' + this.id).hide();">
 		+ Add new purchase
 	</a>
 </div>
