adding email importer setting to user admin page

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -41,6 +41,7 @@
   <b>Email follower</b>: <%=@user.setting.email_follower%> <br>
   <b>Email digest</b>: <%=@user.setting.email_digest%> <br>
   <b>Email update</b>: <%=@user.setting.email_update%> <br>
+  <b>Email importer</b>: <%=@user.setting.email_importer%> <br>
 
   <br>
   <br><br>
