--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -32,6 +32,7 @@
 	
 .opaque { opacity: 1; filter: alpha(opacity=100); }
 
+.opacity-50 { opacity: 0.5; filter: alpha(opacity=50); }
 .opacity-80,
 .opacity-80-100 { opacity: 0.8; filter: alpha(opacity=80); }
 .opacity-90-100 { opacity: 0.9; filter: alpha(opacity=90); }
