--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -402,10 +402,27 @@ ul.notifications li.user-action-box {
 	width: 10px;
 	height: 10px; }
 	
+.import-email-buttons { top: 2px; right: 0; }
 .import-email-buttons .btn img.connected { display: none; }
 .import-email-buttons .btn.connected { background: #555 !important; box-shadow: none !important;}
 .import-email-buttons .btn.connected img.connected { display: inline-block; }
 .import-email-buttons .btn.connected span.unconnected { display: none; }
+
+.hotmail-connect { padding-top: 26px; }
+.hotmail-connect .form-row { padding-bottom: 9px; }
+.hotmail-connect .form-row .action { width: 55%; height: 28px; vertical-align: top; }
+.hotmail-connect .form-row .extras { vertical-align: top; padding-left: 8px; width: 22%; height: 28px; line-height: 28px; }
+.hotmail-connect .form-row .label-box { 
+	width: 23%; 
+	height: 28px; 
+	line-height: 28px;
+	text-align: right;
+	padding-right: 8px; }
+
+.hotmail-connect img.hotmail-brands { 
+	margin: 9px auto 8px; 
+	display: block; 
+	width: 77.41935483871%; }
 
 
 /* -- header notifications dropdown -- */
@@ -422,7 +439,7 @@ ul.notifications li.user-action-box {
 	overflow: hidden; }
 	
 .header ul.notifications li.user-action-box .user-photo { width: 28px; height: 28px; }
-.header ul.notifications li.user-action-box .top-line  { font-size: 12px;}
+.header ul.notifications li.user-action-box .top-line  { font-size: 12px; }
 
 .header ul.notifications li.user-action-box .bottom-line  { line-height: 16px; }
 .header ul.notifications li.user-action-box:last-child  { margin-bottom: -8px !important; }
