--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -408,7 +408,7 @@ ul.notifications li.user-action-box {
 .import-email-buttons .btn.connected img.connected { display: inline-block; }
 .import-email-buttons .btn.connected span.unconnected { display: none; }
 
-.hotmail-connect { padding-top: 26px; display: none; }
+.hotmail-connect { padding-top: 26px; /* display: none; */ }
 .hotmail-connect .form-row { padding-bottom: 9px; }
 .hotmail-connect .form-row .action { width: 55%; height: 28px; vertical-align: top; }
 .hotmail-connect .form-row .extras { vertical-align: top; padding-left: 8px; width: 22%; height: 28px; line-height: 28px; }
@@ -420,7 +420,7 @@ ul.notifications li.user-action-box {
 	padding-right: 8px; }
 
 .hotmail-connect img.hotmail-brands { 
-	margin: 9px auto 8px; 
+	margin: 5px auto 8px; 
 	display: block; 
 	width: 77.41935483871%; }
 
