--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -149,11 +149,11 @@
 
 <div id="user_suggestions_box" style="display:none">
   <div class="box-title" style="margin-top: -6px;">
-    Who to follow
+    People to follow
     <a class="dark" 
       style="float: right;" 
       href="<%=user_suggestions_path(:src => 'feed')%>">
-    	View More
+    	More
     </a>
   </div>
 
@@ -165,11 +165,11 @@
 
 
 <div id="creation" 
-  style="margin-top: -6px;display:none" 
+  style="display:none" 
   class="create-box unit-box border-box">
 
 	<div class="box-title">
-		Add a new purchase
+		Add a purchase
 	</div>
 
 	<div class="well-box border-box rounded-8">
@@ -206,7 +206,7 @@
     style="float: right;" 
     href="javascript:void(0)"
     onclick="$('#creation').show();$('#purchase_query').focus();$('#' + this.id).hide();">
-		+ Add new purchase
+		+ Add a purchase
 	</a>
 </div>
 
