full-width profile feed

--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -218,7 +218,7 @@
 </a>
 <%end%>
 
-<div class="feed-container" style="background: #444;">
+<div class="feed-container">
 	<div id="feed" class="feed relative">
 	</div> 
 	
